Client/inc/style.css
/* ... */
#albums
{
	text-align: left;

	-webkit-transform: translate3d(0, 0, 0);
	transition: 200ms -webkit-filter linear;
}

.dummyAlbum
{
	width: 200px;
	height: 200px;

	opacity: 0;

	display: inline-block;
}

.albumEntry
{
	width: 200px;
	height: 200px;

	opacity: 0;
	cursor: hand;

	display: inline-block;

	transition: 400ms opacity linear;
}

.albumImageSmall:hover,
.albumImageSmall.menuopen
{ 
	z-index: 2;

	width: 210px;
	height: 210px;

	margin-left: -5px;
	margin-top: -5px;

	box-shadow: 0px 0px 20px #000;
}

.albumImageSmall
{
	width: 200px;
	height: 200px;

	position: absolute;
	z-index: 1;

	background: white;

	transition: margin-left 300ms linear, margin-top 300ms linear, left 300ms linear, top 300ms linear, height 300ms, width 300ms linear, box-shadow 300ms linear;
}

#albumImageLarge
{
	width: 100%;
	height: 100%;

	margin: auto;

	transition: all 400ms ease-in-out 400ms;
}

#albumView
{
    position: fixed;
	
	width: 100%; 
	height: calc(100% - 208px);

	background: rgba(255, 255, 255, 0.7);
	
	z-index: 1;

	padding-left: 20px;
	padding-top: 25px;
	
	transition: top 400ms ease-in-out 400ms;
}

#loadingScreen
{
	position: fixed; 

	top: 0px;
	left: 0px;
	
	width: 100%;
	height: 100%;
	
	z-index: 50;
	opacity: 1;

	background-color: white;
}

#loadingSplash
{
	top: 30%;
	left: 50%;
	
	position: absolute;
	
	text-align: center;

	z-index: 51;
	transform: translateX(-50%) translateY(-50%);
}

#loadingImage
{
	margin-top: 15px;

	opacity: 0;

	transition: opacity 1s ease-in-out 1s;
}

#appName
{
	opacity: 0;

	font-family: 'Raleway', sans-serif;
	font-weight: 400;
	font-size: 80px;

	transition: opacity 400ms ease-in-out 400ms;
}

.helper 
{
    display: inline-block;
    height: 100%;
    vertical-align: middle;
}

#closeTracks
{
	top: 0px;
	right: 15px;

	width: 23px;
	height: 15px;

	position: absolute;

	border: 1px solid;
	border-top: 0px;
	border-color: lightgrey;

	transition: background-color 200ms linear;
}

#closeTracks:hover
{
	background-color: rgba(128, 128, 128, 0.5);
}

#closeTracksImage
{
	height: 100%;
	width: 100%;
}

#artwork
{
	float: left;
	
	width: 50%;
	height: 95%;

	text-align: center;

	padding-top: 8px;
}

#tracksContainer
{
	float: left;

	width: 50%;

	transition: top 400ms ease-in-out 400ms;
}

#tracks
{
	display: block;
	position: relative;
	
	padding-bottom: 20px;
	padding-right: 20px;

	overflow: visible;
}

.playButtonSmall
{
	width: 20px;
	
	top: 10px;
	left: 5px;

	position: absolute;

	-webkit-user-select: none;
}

.playButtonSmallImg
{
	width: 16px;
	height: 16px;
	border: 1px solid;
	border-radius: 50%;
	border-color: black;

	transition: background-color 200ms linear;
}

.playButtonSmallImg:hover
{
	background-color: rgba(128, 128, 128, 0.5);
}

#controlBar
{
	position: fixed; 
	bottom: 0px;
	left: 0px; 
	width: 100%; 
	height: 80px;
	z-index: 2;

	background-image: url('/images/ampBackground.png');
	background-size: cover;

	transition: opacity 400ms linear;

	opacity: 0.8;

	-webkit-user-select: none;
}

#controlBar:hover
{
	opacity: 1.0;
}

#bkButton
{
   	left: 0px;
}

#playButton
{
   	left: 66px;
}

#fwButton
{
   	left: 199px;
}

.ctrlBtn
{
	position: absolute;

	width: 116px;
	height: 27px;

	bottom: 0px;

	border-top: 1px solid #5b6a73;
	background: linear-gradient(to bottom, #000000, #232729);
   	
   	padding: 5px 5px;
   	border-radius: 3px;

   	box-shadow: rgba(0,0,0,1) 0 1px 0;
   	text-shadow: rgba(0,0,0,.4) 0 1px 0;
   	color: white;
   	
   	text-align: center;
   	vertical-align: middle;

	transition: opacity 400ms linear;
}

.ctrlBtn:hover
{
	cursor: pointer;
	background: linear-gradient(to bottom, #000000, #666C6F);
}

.ctrlBtn:active
{
	border-top: 0px;
}

.ctrlBtn.disabled
{
	opacity: 0.3;
}

.ctrlBtn.disabled:hover
{
	cursor: default;
	background: linear-gradient(to bottom, #000000, #232729);
}

.ctrlBtn.disabled:active
{
	border-top: 1px solid #5b6a73;
}

.ctrlBtn img
{
	width: 50px;
	height: 50px;
	
	margin-top: -11px;
	
	-webkit-filter: invert(100%);
}

.smallCtrlBtn
{
	width: 50px;
}

#ampDisplay
{
	position: fixed;

	left: 31%;

	width: 40%;
	height: 50px;

	bottom: 8px;

	border-top: 1px solid #5b6a73;
	background: black;
   	
   	padding: 5px 5px;
   	border-radius: 3px;

   	box-shadow: rgba(0,0,0,1) 0 1px 0;
   	text-shadow: rgba(0,0,0,.4) 0 1px 0;
   	color: white;
   	
   	text-align: center;
   	vertical-align: middle;

   	font-family: 'digital-7', sans-serif;
	font-weight: 400;

	cursor: default;
}

#currentTime
{
	position: absolute;

	left: 14px;
	top: 3px;

	width: 128px;

	font-family: inherit;
	font-size: 55px;

	text-align: right;

	color: white;

	opacity: 0.6;
}

#songInfo
{
	position: relative;

	font-family: inherit;
	font-size: 16px;

	text-align: left;

	top: 1px;
	left: 154px;
	
	width: calc(100% - 154px);
	opacity: 0.6;

	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

#totalProgress
{
	position: absolute;

	left: 15px;
	right: 15px;
	bottom: 5px;

	height: 1px;

	border-top: 1px solid;
	border-color: white;

	opacity: 0.2;
}

#progressContainer
{
	position: absolute;

	left: 15px;
	right: 15px;
	bottom: 5px;

	height: 1px;
}

#songProgress
{
	position: absolute;

	bottom: 0px;

	height: 1px;

	border-top: 1px solid;
	border-color: white;

	opacity: 1;
}

.trackEntry
{
	position: relative;

	height: 35px;
}

.trackEntry:hover, .selected
{
	background-color: rgba(128, 128, 128, 0.2);
}

.trackEntry .trackGradient
{
	position: absolute;
		
	opacity: 0;

	height: 35px;
	width: 100%;

	transition: opacity 400ms linear;

	background: linear-gradient(to right, rgba(0,0,0,0) 0%, rgba(255, 255, 255, 0.65) 23%, rgba(255, 255, 255, 0.65) 81%, rgba(0,0,0,0) 100%);
}

.trackEntry div
{
	line-height: 35px;
	display: inline-block;

	position: absolute;

	overflow: hidden;
	
	white-space: nowrap;
	text-overflow: ellipsis;
}

.track
{
	top: 1px;
	left: 25px;

	width: 25px;
	text-align: center;
	
	font-size: small;
}

.song
{
	left: 55px;
	right: 65px;

	text-align: left;
}
/* ... */

